@@ -53,6 +53,7 @@ my %WriteMakefileArgs = (
     "Exporter" => 0,
     "Fcntl" => 0,
     "File::Basename" => 0,
+    "File::Copy::Recursive" => 0,
     "File::Path" => 2,
     "File::Spec" => 0,
     "File::Spec::Functions" => 0,
