@@ -14,12 +14,14 @@ use File::Temp;
 use FileSlurping qw( slurp slurp_tree );
 
 my $tempdir = new_volvox_sandbox();
+my $temp2 = File::Temp->newdir( CLEANUP => $ENV{KEEP_ALL} ? 0 : 1 );
 system $^X, 'bin/generate-names.pl', (
     '--out'   => "$tempdir",
+    '--workdir' => $temp2,
     '--completionLimit' => 15
     );
 ok( ! $?, 'generate-names.pl also ran ok on volvox test data' );
-is_deeply( read_names($tempdir), read_names('tests/data/volvox_formatted_names') );
+is_deeply( read_names($tempdir), read_names('tests/data/volvox_formatted_names') ) or diag explain read_names($tempdir);
 
 $tempdir = new_volvox_sandbox();
 system $^X, 'bin/generate-names.pl', (
